--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                     <div class="nk-block-head-content">
                                         <h4 class="nk-block-title">Sign-In</h4>
                                         <div class="nk-block-des">
-                                            <p>Access the DashLite panel using your email and passcode.</p>
+                                            <p>Access the dashboard using your email and passcode.</p>
                                         </div>
                                     </div>
                                 </div>
